[차량 검색]판매 타입 selectBox 추가